Fixed demo css [#183546377]
- Removed outer scrollbar
- Fixed resizing interactive on window resize
- Hide the hint as it is confusing in the preview

--- a/src/bar-graph/components/bar-chart.scss
+++ b/src/bar-graph/components/bar-chart.scss
@@ -29,7 +29,8 @@
     .chartAndXAxisLabel {
       display: flex;
       flex-direction: column;
-      width: 100%;
+      flex: auto;
+      min-width: 0;
       align-items: center;
 
       .title {
